@@ -100,9 +100,6 @@ proc ::tk_setPalette {args} {
     if {![info exists new(troughColor)]} {
 	set new(troughColor) $darkerBg
     }
-    if {![info exists new(selectColor)]} {
-	set new(selectColor) #b03060
-    }
 
     # let's make one of each of the widgets so we know what the 
     # defaults are currently for this platform.
@@ -242,7 +239,7 @@ proc ::tk_bisque {} {
     tk_setPalette activeBackground #e6ceb1 activeForeground black \
 	    background #ffe4c4 disabledForeground #b0b0b0 foreground black \
 	    highlightBackground #ffe4c4 highlightColor black \
-	    insertBackground black selectColor #b03060 \
+	    insertBackground black \
 	    selectBackground #e6ceb1 selectForeground black \
 	    troughColor #cdb79e
 }
